home-automation/esphome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
  labels:
    app: esphome
    app.kubernetes.io/name: esphome
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: esphome
  template:
    metadata:
      labels:
        app: esphome
        app.kubernetes.io/name: esphome 
    spec:
      hostNetwork: true
      containers:
        - name: esphome
          image: ghcr.io/esphome/esphome:2025.12.7
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /config      
          ports:
            - containerPort: 6502
              name: http
              protocol: TCP
        - name: cron-borg
          image: ghcr.io/mattsve/borgmatic:0.5
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /data
            - name: backup-config
              mountPath: /config
            - name: ssh-secrets
              mountPath: /root/.ssh
              readOnly: true
          args:
            - cron
            - /config/crontab
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: esphome
        - name: ssh-secrets
          secret:
            secretName: esphome
            items:
              - key: id_ed25519
                mode: 0600
                path: id_ed25519
              - key: id_ed25519.pub
                mode: 0644
                path: id_ed25519.pub
              - key: known_hosts
                mode: 0644
                path: known_hosts
        - name: backup-config
          emptyDir: {}
        - name: backup-templates
          configMap:
            name: esphome-backup-templates
        - name: backup-secrets
          secret:
            secretName: esphome
            items:
              - key: borg-repo
                mode: 0400
                path: borg-repo
              - key: borg-passphrase
                mode: 0400
                path: borg-passphrase
