home-automation/esphome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: '/'
        backend:
          service:
            name: esphome
            port:
              number: 6052
    host: esphome.k3s.ingenstans.se
  tls:
    - hosts:
      - esphome.k3s.ingenstans.se
      secretName: esphome-ingress-cert
